+ allt som vi gjort

--- a/project_banapaj/site/index.html
+++ b/project_banapaj/site/index.html
@@ -8,15 +8,44 @@
     <body>
         <header>
             <img src="./img/bananpajlogo.png" class="logo"/>
-            <div class="buttonnav" onclick="dock(navi)"></div>
+            <div class="buttonnav" onclick="dock(navi)">
+                <div class="streck"></div>
+                <div class="streck"></div>
+                <div class="streck"></div>
+            </div>
         </header>
         <nav class="docked" id="navi">
+            <a class="navtext" href="./index.html">Hem</a>
+            <a class="navtext" href="./bilder.html">Bilder</a>
+            <a class="navtext" href="./ombp.html">Om bananpajer</a>
         </nav>
         <main>
             <h1>Vällkomen till Bananpaj.se!</h1>
-            <img class="paj" src="./img/bananpaj3.jpg">
             <p>Att skapa en Bananpaj är en konst, och idag ska vi gå igenom hur man skapar en av guds godaste gåvor. </p>
+            <img class="paj" src="./img/bananpaj3.jpg">
+            <h3>Ingredienser</h3>
+            <ul>
+                <li>3-4 bananer</li>
+                <li>1 ½ dl socker</li>
+                <li>1 ½ dl vetemjöl</li>
+                <li>100 g smör, rumstempererat</li>
+                <li>½ dl ljus sirap</li>
+            </ul>
+            <h3>Steg för steg</h3>
+            <ul>
+                <li>1. Sätt på ugnen på 200 grader.</li>
+                <br>
+                <li>2. Blanda ihop socker, mjöl och smör i en bunke tills det är helt blandat. Tillsätt sen sirapen och rör ihop.</li>
+                <br>
+                <li>3. Skiva ner bananen i en pajform. Bred ut smeten ovanpå bananskivorna.</li>
+                <br>
+                <li>4. Grädda i ugnen i ca 20 minuter, tills pajen har fått färg. Servera varm tillsammans med lite glass!</li>
+            </ul>
         </main>
+        <footer> 
+            <h1 class="copyright">© 2017 Bananpaj inc</h1>
+            <h1 class="copyright2">by Filip and Joel</h1>
+        </footer>
     </body>
     <script src="./js/funktion.js"></script>
 </html>
